--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-transformers>=4.6.0,<5.0.0
-tokenizers>=0.10.3
+transformers
+tokenizers
 tqdm
-torch>=1.6.0
+torch
 torchvision
 numpy
 scikit-learn
